--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -14,7 +14,7 @@
                   <div class="clr"></div>
                   <script type="text/javascript">
                   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                  var disqus_shortname = 'vm4game'; // required: replace example with your forum shortname
+                  var disqus_shortname = 'testtcom'; // required: replace example with your forum shortname
                   var disqus_identifier = '/news/{{ news1_mn.slug }}';
                   var disqus_url = 'http://127.0.0.1:8000/news/{{ news1_mn.slug }}';
                   /* * * DON'T EDIT BELOW THIS LINE * * */
@@ -25,7 +25,7 @@
                      (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
                   }());
                   </script>
-                  <p class="post-data"> <a data-disqus-identifier = "/news/{{ news1_mn.slug }}" href="/news/{{ news1_mn.slug }}#disqus_thread" class="com"></a><span class="date">{{ news1_mn.date_pub }}</span> &nbsp;|&nbsp; Posted by {{ news1_mn.author }} &nbsp;|&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a></p>
+                  <p class="post-data"> <a href="/news/{{ news1_mn.slug }}#disqus_thread" data-disqus-identifier = "/news/{{ news1_mn.slug }}" class="com"></a><span class="date">{{ news1_mn.date_pub }}</span> &nbsp;|&nbsp; Posted by {{ news1_mn.author }} </p>
                   {% if news1_mn.img_file %}
                       <img src="{{ news1_mn.img_file.url }}"  width="138" height="138" alt="" class="fl" />
                   {% else %}
