--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -45,35 +45,29 @@
         <div class="mainbar">
         {% block content %} {% endblock %}
         </div>
-        <div class="sidebar">
-          <div class="gadget">
-              {% block sidebar %}{% endblock %}
-          </div>
-        </div>
         <div class="clr"></div>
       </div>
     </div>
     <div class="fbg">
       <div class="fbg_resize">
         <div class="col c1">
-          <h2><span>Image Gallery</span></h2>
-          <a href="#"><img src="{% static 'images/pic_1.jpg' %}" width="58" height="58" alt="" /></a> <a href="#"><img src="{% static 'images/pic_2.jpg' %}" width="58" height="58" alt="" /></a> <a href="#"><img src="{% static 'images/pic_3.jpg' %}" width="58" height="58" alt="" /></a> <a href="#"><img src="{% static 'images/pic_4.jpg' %}" width="58" height="58" alt="" /></a> <a href="#"><img src="{% static 'images/pic_5.jpg' %}" width="58" height="58" alt="" /></a> <a href="#"><img src="{% static 'images/pic_6.jpg' %}" width="58" height="58" alt="" /></a> </div>
+          <h2><span><a href="/">Home</a></span></h2>
+        </div>
         <div class="col c2">
-          <h2><span>Lorem Ipsum</span></h2>
-          <p>Lorem ipsum dolor<br />
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. <a href="#">Morbi tincidunt, orci ac convallis aliquam</a>, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam.</p>
+          <h2><span><a href="/support">Articles</a></span></h2>
         </div>
         <div class="col c3">
-          <h2><span>About</span></h2>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. llorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum. <a href="#">Learn more...</a></p>
+          <h2><span><a href="/about_us">About Us</a></span></h2>
+        </div>
+        <div class="col c4">
+          <h2><span><a href="/contact">Contact Us</a></span></h2>
         </div>
         <div class="clr"></div>
       </div>
     </div>
     <div class="footer">
       <div class="footer_resize">
-        <p class="lf">Copyright &copy; <a href="#">Domain Name</a>. All Rights Reserved</p>
-        <p class="rf">Get More <a target="_blank" href="http://www.free-css.com/">Free CSS Templates</a> by <a target="_blank" href="http://www.atomicwebsitetemplates.com/">AtomicWebsiteTemplates</a></p>
+        <p class="lf">Copyright &copy; 2014 vm4game.com, all rights reserved</p>
         <div class="clr"></div>
       </div>
     </div>
