--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -12,33 +12,51 @@
         <div class="article">
           <h2><span>Contact</span></h2>
           <div class="clr"></div>
-          <p>You can find more of my free template designs at my website. For premium commercial designs, you can check out DreamTemplate.com.</p>
+          <p>Welcome to our small but friendly site. If you have any wishes and ideas please don't hesitate to contact us. We'll try to do my best to create game servers that you'd love.</p>
         </div>
         <div class="article">
           <h2><span>Send us</span> mail</h2>
           <div class="clr"></div>
-          <form action="#" method="post" id="sendemail">
+          {% if form.errors %}
+            <p style="color: red;">
+              Please correct the error{{ form.errors|pluralize }} below.
+            </p>
+          {% endif %}
+          <form action="" method="post">
             <ol>
               <li>
-                <label for="name">Name (required)</label>
-                <input id="name" name="name" class="text" />
+                {{ form.subject.errors }}
+                <label for="id_subject">Subject</label>
+                {{ form.subject }}
               </li>
               <li>
-                <label for="email">Email Address (required)</label>
-                <input id="email" name="email" class="text" />
+                {{ form.email.errors }}
+                <label for="id_email">Email Address</label>
+                {{ form.email }}
               </li>
               <li>
-                <label for="website">Website</label>
-                <input id="website" name="website" class="text" />
+                {{ form.message.errors }}
+                <label for="id_message">Your Message</label>
+                {{ form.message }}
+              </li>
+              {% csrf_token %}
+              <li>
+                <script type="text/javascript"
+                  src="http://www.google.com/recaptcha/api/challenge?k={{ captcha_pub_key }}">
+                </script>
+                <noscript>
+                  <iframe src="http://www.google.com/recaptcha/api/noscript?k={{ captcha_pub_key }}"
+                    height="300" width="500" frameborder="0"></iframe><br>
+                  <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+                  </textarea>
+                  <input type="hidden" name="recaptcha_response_field"
+                    value="manual_challenge">
+                </noscript>
               </li>
               <li>
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="8" cols="50"></textarea>
+                  {{ captcha_error }}
               </li>
-              <li>
-                <input type="image" name="imageField" id="imageField" src="{% static 'images/submit.gif' %}" class="send" />
-                <div class="clr"></div>
-              </li>
+              <input type="submit" value="Submit" class="send">
             </ol>
           </form>
         </div>
