--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -45,6 +45,11 @@
         <div class="mainbar">
         {% block content %} {% endblock %}
         </div>
+          <div class="sidebar">
+          <div class="gadget">
+              {% block sidebar %}{% endblock %}
+          </div>
+        </div>
         <div class="clr"></div>
       </div>
     </div>
