--- a/mysite/templates/articles.html
+++ b/mysite/templates/articles.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-    {% block title %}vm4game | Support{% endblock %}
+    {% block title %}vm4game | Articles{% endblock %}
     {% block nav %}
         <li><a href="/">Home</a></li>
-        <li class="active"><a href="/support">Support</a></li>
+        <li class="active"><a href="/articles">Articles</a></li>
         <li><a href="/about_us">About Us</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/contact">Contact Us</a></li>
