--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -59,7 +59,7 @@
           <h2><span><a href="/">Home</a></span></h2>
         </div>
         <div class="col c2">
-          <h2><span><a href="/support">Articles</a></span></h2>
+          <h2><span><a href="/articles">Articles</a></span></h2>
         </div>
         <div class="col c3">
           <h2><span><a href="/about_us">About Us</a></span></h2>
