--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -2,7 +2,7 @@
     {% block title %}vm4game{% endblock %}
     {% block nav %}
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="/support">Support</a></li>
+        <li><a href="/articles">Articles</a></li>
         <li><a href="/about_us">About Us</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/contact">Contact Us</a></li>
@@ -47,4 +47,4 @@
                 </div>
             {% endfor %}
     {% endblock %}
-    
+
