--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -2,7 +2,7 @@
     {% block title %}vm4game | About{% endblock %}
     {% block nav %}
         <li><a href="/">Home</a></li>
-        <li><a href="/support">Support</a></li>
+        <li><a href="/articles">Articles</a></li>
         <li class="active"><a href="/about_us">About Us</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/contact">Contact Us</a></li>
