--- a/mysite/templates/thanks.html
+++ b/mysite/templates/thanks.html
@@ -3,7 +3,7 @@
     {% block title %}vm4game | Thanks{% endblock %}
     {% block nav %}
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="/support">Support</a></li>
+        <li><a href="/articles">Articles</a></li>
         <li><a href="/about_us">About Us</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/contact">Contact Us</a></li>
