--- a/news/templates/news/singlenews.html
+++ b/news/templates/news/singlenews.html
@@ -2,7 +2,7 @@
     {% block news_title %}{{ news }}{% endblock %}
     {% block news_nav %}
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="/support">Support</a></li>
+        <li><a href="/articles">Articles</a></li>
         <li><a href="/about_us">About Us</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/contact">Contact Us</a></li>
