--- a/mysite/templates/articles.html
+++ b/mysite/templates/articles.html
@@ -7,15 +7,15 @@
         <li><a href="/contact">Contact Us</a></li>
     {% endblock %}
     {% block content %}
-        {% for news1_mn in news_mn %}
+        {% for article in articles %}
                 <div class="article">
-                  <h2><span>{{ news1_mn }}</span></h2>
+                  <h2><span>{{ article }}</span></h2>
                   <div class="clr"></div>
                   <script type="text/javascript">
                   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
                   var disqus_shortname = 'testtcom'; // required: replace example with your forum shortname
-                  var disqus_identifier = '/news/{{ news1_mn.slug }}';
-                  var disqus_url = 'http://127.0.0.1:8000/news/{{ news1_mn.slug }}';
+                  var disqus_identifier = '/news/{{ article.slug }}';
+                  var disqus_url = 'http://127.0.0.1:8000/news/{{ article.slug }}';
                   /* * * DON'T EDIT BELOW THIS LINE * * */
                   (function () {
                      var s = document.createElement('script'); s.async = true;
@@ -24,14 +24,14 @@
                      (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
                   }());
                   </script>
-                  <p class="post-data"> <a href="/news/{{ news1_mn.slug }}#disqus_thread" data-disqus-identifier = "/news/{{ news1_mn.slug }}" class="com"></a><span class="date">{{ news1_mn.date_pub }}</span> &nbsp;|&nbsp; Posted by {{ news1_mn.author }} </p>
-                  {% if news1_mn.img_file %}
-                      <img src="{{ news1_mn.img_file.url }}"  width="138" height="138" alt="" class="fl" />
+                  <p class="post-data"> <a href="/news/{{ article.slug }}#disqus_thread" data-disqus-identifier = "/news/{{ article.slug }}" class="com"></a><span class="date">{{ article.date_pub }}</span> &nbsp;|&nbsp; Posted by {{ article.author }} </p>
+                  {% if article.img_file %}
+                      <img src="{{ article.img_file.url }}"  width="138" height="138" alt="" class="fl" />
                   {% else %}
                   {% endif %}
-                  <p class="cont">{{ news1_mn.contents|safe|truncatewords:"35" }}</p>
-                  <p class="spec"><a href="/news/{{ news1_mn.slug }}/" class="rm">Read more</a></p>
-                  {% if news1_mn.img_file %}
+                  <p class="cont">{{ article.contents|safe|truncatewords:"35" }}</p>
+                  <p class="spec"><a href="/news/{{ article.slug }}/" class="rm">Read more</a></p>
+                  {% if article_mn.img_file %}
                       <p></p>
                       <p></p>
                       <p></p>
