created model article

--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
     {% block title %}
         {% block news_title %}{% endblock %}
+        {% block article_title %}{% endblock %}
     {% endblock %}
     {% block nav %}
         {% block news_nav %}{% endblock %}
+        {% block article_nav %}{% endblock %}
     {% endblock %}
     {% block content %}
         {% block news_content %}{% endblock %}
+        {% block article_content %}{% endblock %}
     {% endblock %}
     {% block sidebar %}
         {% block news_sidebar %}{% endblock %}
+        {% block article_sidebar %}{% endblock %}
     {% endblock %}
