--- a/mysite/templates/articles.html
+++ b/mysite/templates/articles.html
@@ -14,8 +14,8 @@
                   <script type="text/javascript">
                   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
                   var disqus_shortname = 'testtcom'; // required: replace example with your forum shortname
-                  var disqus_identifier = '/news/{{ article.slug }}';
-                  var disqus_url = 'http://127.0.0.1:8000/news/{{ article.slug }}';
+                  var disqus_identifier = '/articles/article/{{ article.slug }}';
+                  var disqus_url = 'http://127.0.0.1:8000/articles/article/{{ article.slug }}';
                   /* * * DON'T EDIT BELOW THIS LINE * * */
                   (function () {
                      var s = document.createElement('script'); s.async = true;
@@ -24,13 +24,13 @@
                      (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
                   }());
                   </script>
-                  <p class="post-data"> <a href="/news/{{ article.slug }}#disqus_thread" data-disqus-identifier = "/news/{{ article.slug }}" class="com"></a><span class="date">{{ article.date_pub }}</span> &nbsp;|&nbsp; Posted by {{ article.author }} </p>
+                  <p class="post-data"> <a href="/articles/article/{{ article.slug }}#disqus_thread" data-disqus-identifier = "/articles/article/{{ article.slug }}" class="com"></a><span class="date">{{ article.date_pub }}</span> &nbsp;|&nbsp; Posted by {{ article.author }} </p>
                   {% if article.img_file %}
                       <img src="{{ article.img_file.url }}"  width="138" height="138" alt="" class="fl" />
                   {% else %}
                   {% endif %}
                   <p class="cont">{{ article.contents|safe|truncatewords:"35" }}</p>
-                  <p class="spec"><a href="/news/{{ article.slug }}/" class="rm">Read more</a></p>
+                  <p class="spec"><a href="/articles/article/{{ article.slug }}/" class="rm">Read more</a></p>
                   {% if article_mn.img_file %}
                       <p></p>
                       <p></p>
