--- a/news/templates/news/singlearticle.html
+++ b/news/templates/news/singlearticle.html
@@ -1,21 +1,21 @@
 {% extends 'news/base.html' %}
-    {% block news_title %}{{ news }}{% endblock %}
-    {% block news_nav %}
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/articles">Articles</a></li>
+    {% block article_title %}{{ article }}{% endblock %}
+    {% block article_nav %}
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="/articles">Articles</a></li>
         <li><a href="/about_us">About Us</a></li>
         <li><a href="/contact">Contact Us</a></li>
     {% endblock %}
-    {% block news_content %}
+    {% block article_content %}
         <div class="article">
-          <h2><span>{{ news }}</span></h2>
+          <h2><span>{{ article }}</span></h2>
           <div class="clr"></div>
 
           <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'testtcom'; // required: replace example with your forum shortname
-            var disqus_identifier = '/news/{{ news.slug }}';
-            var disqus_url = 'http://127.0.0.1:8000/news/{{ news.slug }}';
+            var disqus_identifier = '/articles/article/{{ article.slug }}';
+            var disqus_url = 'http://127.0.0.1:8000/articles/article/{{ article.slug }}';
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function () {
               var s = document.createElement('script'); s.async = true;
@@ -27,22 +27,25 @@
 
           <p class="post-data">
               {# /* * * DON'T FORGET BELOW THIS LINE * * */#}
-              <a href="#disqus_thread" data-disqus-identifier = "/news/{{ news.slug }}" class="com"></a>
-              <span class="date">{{ news.date_pub }}</span>
-              &nbsp;|&nbsp; Posted by {{ news.author }}
-              {% if news.link %}
-              &nbsp;|&nbsp; <a href="{{ news.link }}">Source</a>
+              <a href="#disqus_thread" data-disqus-identifier = "/articles/article/{{ article.slug }}" class="com"></a>
+              <span class="date">{{ article.date_pub }}</span>
+              &nbsp;|&nbsp; Posted by {{ article.author }}
+              {% if article.link %}
+              &nbsp;|&nbsp; <a href="{{ article.link }}">Source</a>
               {% else %}
               {% endif %}
           </p>
-
-          <p>{{ news.contents|safe }}</p>
+          {% if article.img_file %}
+            <img src="{{ article.img_file.url }}"  width="138" height="138" alt="" class="fl" />
+          {% else %}
+          {% endif %}
+          <p>{{ article.contents|safe }}</p>
           <div id="disqus_thread"></div>
           <script type="text/javascript">
              /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
              var disqus_shortname = 'testtcom'; // required: replace example with your forum shortname
-             var disqus_identifier = '/news/{{ news.slug }}';
-             var disqus_url = 'http://127.0.0.1:8000/news/{{ news.slug }}';
+             var disqus_identifier = '/articles/article/{{ article.slug }}';
+             var disqus_url = 'http://127.0.0.1:8000/articles/article/{{ article.slug }}';
 
              /* * * DON'T EDIT BELOW THIS LINE * * */
              (function() {
